# un-aid-intelligence-platform

./: .env.example  .gitignore  DEPLOY_BACKEND.md  README.md  aid_data.csv  generate_all_forecasts.py  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  start_server.py  startup.py  vercel.json
.github/workflows/: keepalive.yml
app/: __init__.py  database.py  models.py
app/routers/: aid_records.py  chat.py  countries.py  dashboard.py  donors.py  export.py  forecasting.py  map.py  sectors.py
app/services/: data_loader.py
client/: debug-sectors.html  index.html  tailwind.config.ts  tsconfig.json  vite.config.js
client/src/: App.tsx  index.css  shap-test.html  vite-env.d.ts
client/src/components/charts/: AidChart.tsx
client/src/components/chat/: ChatInterface.tsx
client/src/components/export/: CompactExportButtons.tsx  ExportButtons.tsx
client/src/components/forecasting/: ForecastingPanel.tsx  ForecastingPanel20250802.tsx  ForecastingPanelCacheBust.tsx  ForecastingPanelDeadline.tsx  ForecastingPanelFinal.tsx  ForecastingPanelUrgent.tsx
client/src/components/map/: WorldMap.tsx
client/src/hooks/: use-aid-data.ts
client/src/lib/: queryClient.ts
client/src/pages/: dashboard.tsx
client/src/utils/: numberFormat.ts
server/: index.ts
static/: shap-test.html
